# rust-pomodoro

./: .editorconfig  Cargo.toml  build_and_copy.sh
src/: app.rs  app_thread.rs  main.rs  notify.rs
